Transfer Learning using MobileNetV3

--- a/Deep Learning Fundamentals/Exercise2-generating-one-token-at-a-time.ipynb
+++ b/Deep Learning Fundamentals/Exercise2-generating-one-token-at-a-time.ipynb
@@ -26,6 +26,14 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/santhoshreddygujja/Library/CloudStorage/OneDrive-Personal/Learning/Udacity - Generative AI/Generative_AI_Learning/genai/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "tensor([[  52,   67, 4355,  318,  262, 1266, 1295,  284, 2193,  546, 1152,  876]])"
@@ -240,19 +248,19 @@
        "      <th>8300</th>\n",
        "      <td>8300</td>\n",
        "      <td>programming</td>\n",
-       "      <td>0.157591</td>\n",
+       "      <td>0.157589</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4673</th>\n",
        "      <td>4673</td>\n",
        "      <td>learning</td>\n",
-       "      <td>0.148413</td>\n",
+       "      <td>0.148416</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4981</th>\n",
        "      <td>4981</td>\n",
        "      <td>models</td>\n",
-       "      <td>0.048506</td>\n",
+       "      <td>0.048505</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17219</th>\n",
@@ -272,9 +280,9 @@
       ],
       "text/plain": [
        "          id         token         p\n",
-       "8300    8300   programming  0.157591\n",
-       "4673    4673      learning  0.148413\n",
-       "4981    4981        models  0.048506\n",
+       "8300    8300   programming  0.157589\n",
+       "4673    4673      learning  0.148416\n",
+       "4981    4981        models  0.048505\n",
        "17219  17219       biology  0.046481\n",
        "16113  16113    algorithms  0.027796"
       ]
@@ -424,7 +432,7 @@
        "      <th>13</th>\n",
        "      <td>13</td>\n",
        "      <td>.</td>\n",
-       "      <td>0.352228</td>\n",
+       "      <td>0.352222</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -436,7 +444,7 @@
        "      <th>290</th>\n",
        "      <td>290</td>\n",
        "      <td>and</td>\n",
-       "      <td>0.109371</td>\n",
+       "      <td>0.109373</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>287</th>\n",
@@ -448,7 +456,7 @@
        "      <th>8950</th>\n",
        "      <td>8950</td>\n",
        "      <td>languages</td>\n",
-       "      <td>0.058288</td>\n",
+       "      <td>0.058289</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -456,11 +464,11 @@
       ],
       "text/plain": [
        "        id       token         p\n",
-       "13      13           .  0.352228\n",
+       "13      13           .  0.352222\n",
        "11      11           ,  0.135986\n",
-       "290    290         and  0.109371\n",
+       "290    290         and  0.109373\n",
        "287    287          in  0.069529\n",
-       "8950  8950   languages  0.058288"
+       "8950  8950   languages  0.058289"
       ]
      },
      "metadata": {},
@@ -561,7 +569,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
