--- a/Deep Learning Fundamentals/LightweightFineTuning.ipynb
+++ b/Deep Learning Fundamentals/LightweightFineTuning.ipynb
@@ -1680,13 +1680,13 @@
    "id": "647e2b07",
    "metadata": {},
    "source": [
-    "For Lin2\n",
+    "#Conclusion\n",
+    "- Without training, Accuracy is 13%\n",
+    "- With Full Training, Accuracy is 98.9% \n",
+    "- With the Lin2 Layer Training, Accuracy is 75% (This is the observation. I changed the code to train the out_lin )\n",
+    "- With the Out_lin Layer Training, Accuracy is 93.8% \n",
     "\n",
-    "{'eval_loss': 0.6714442372322083,\n",
-    " 'eval_accuracy': 0.7524663677130045,\n",
-    " 'eval_runtime': 46.4629,\n",
-    " 'eval_samples_per_second': 23.998,\n",
-    " 'eval_steps_per_second': 6.005}"
+    "Conclusion: With the LORA, While the trainable parameters are 0.4%, Accuracy improved drastically."
    ]
   },
   {
